Closed
Bug 226169
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for timeline files
Categories
(Core Graveyard :: Tracking, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
1.38 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xpcom/ds/nsTimelineService.cpp&rev=3.10&mark=216#211
Deref-error: "new_data"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xpcom/ds/nsTimelineService.cpp&rev=3.10&mark=409#404
Deref-error: "timer"
Attachment #135891 -
Flags: superreview?(roc)
Attachment #135891 -
Flags: review?(roc)
Attachment #135891 -
Flags: superreview?(roc)
Attachment #135891 -
Flags: superreview+
Attachment #135891 -
Flags: review?(roc)
Attachment #135891 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•