Bug 226169 DRefTool analysis for timeline files r=roc sr=roc