xpcom/ds/nsTimelineService.cpp
@@ -212,6 +212,9 @@ static TimelineThreadData *GetThisThreadData()
     if (data == nsnull) {
         // First request for this thread - allocate it.
         new_data = new TimelineThreadData();
+        if (!new_data)
+            goto done;
+
         // Fill it
         new_data->timers = PL_NewHashTable(100, PL_HashString, PL_CompareStrings,
                                  PL_CompareValues, NULL, NULL);
@@ -404,6 +407,9 @@ PR_IMPLEMENT(nsresult) NS_TimelineStartTimer(const char *timerName)
         = (nsTimelineServiceTimer *)PL_HashTableLookup(thread->timers, timerName);
     if (timer == NULL) {
         timer = new nsTimelineServiceTimer;
+        if (!timer)
+            return NS_ERROR_OUT_OF_MEMORY;
+
         PL_HashTableAdd(thread->timers, timerName, timer);
     }
     timer->start();
